[tool.poetry]
name = "y_social"
version = "0.1.0"
description = "Social media app for people who as \"Y?\""
authors = ["brock <brockbrumley95@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
gunicorn = "^21.2.0"
uvicorn = "^0.23.2"
asyncpg = "^0.28.0"
pydantic = {extras = ["email"], version = "^2.3.0"}
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
